--- a/smarTravel/src/main/resources/application.properties
+++ b/smarTravel/src/main/resources/application.properties
@@ -21,14 +21,11 @@ spring.datasource.hikari.max-lifetime=1800000
 spring.datasource.hikari.auto-commit=true
 
 ## Mapper Setting
-mybatis.type-aliases-package=com.ssafy.enjoytrip.*.model.dto
+mybatis.type-aliases-package=com.CD2024.smarTravel.*.model.dto
 mybatis.mapper-locations=classpath:mapper/**/*.xml
 mybatis.configuration.map-underscore-to-camel-case=true
 ## File Setting
 
-#file.path=c:\\SSAFY\\springboot\\upload
-#file.imgPath=c:\\SSAFY\\springboot\\img
-#spring.servlet.multipart.max-file-size=25MB
 
 # Logging
 
